made knowledge gaps in AskResult of RestAPI really optional
